--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
       display:block;
       cursor: grab;
       touch-action:none;
+      user-select:none;
     }
     canvas#stage.dragging{ cursor: grabbing; }
 
@@ -292,7 +293,7 @@
   <div class="panel">
     <h1>3D ストリングアート（正 N/M）</h1>
     <div class="desc">
-      N/M を入力して描画。左ドラッグ=回転 / 右ドラッグ=パン / ホイール=ズーム
+      N/M を入力して描画。左ドラッグ=回転 / 右ドラッグ=パン / ホイール=ズーム / ダブルクリック=画角リセット
     </div>
 
     <div class="controlsTop">
@@ -471,7 +472,6 @@ class MathUtil{
   }
 }
 
-/** 2Dと同様の「巡回」を3Dのノード列へ（上面/底面を交互） */
 class CycleBuilder{
   static buildCycle3D(N, M, start){
     const step = MathUtil.mod(M, N);
@@ -624,9 +624,8 @@ class ThreeScene{
     this.guideGroup = new THREE.Group();
     this.root3D.add(this.guideGroup);
 
-    // Raycaster
     this.raycaster = new THREE.Raycaster();
-    this.raycaster.params.Line = { threshold: 0.08 }; // ワールド単位
+    this.raycaster.params.Line = { threshold: 0.08 };
     this.pointerNDC = new THREE.Vector2();
 
     this.view = {
@@ -781,7 +780,6 @@ class ThreeScene{
     this.resetViewToFit(R, H);
   }
 
-  // Lineクリック検出（rowLineObjects は THREE.Line の配列）
   pickLine(clientX, clientY, rowLineObjects){
     const rect = this.stage.getBoundingClientRect();
     const x = ((clientX - rect.left) / rect.width) * 2 - 1;
@@ -791,7 +789,7 @@ class ThreeScene{
     this.raycaster.setFromCamera(this.pointerNDC, this.camera);
     const hits = this.raycaster.intersectObjects(rowLineObjects, false);
     if (!hits.length) return null;
-    return hits[0].object; // THREE.Line
+    return hits[0].object;
   }
 }
 
@@ -827,7 +825,6 @@ class RowBuilder{
         if (Array.isArray(x.material)) x.material.forEach(m=>m.dispose());
         else x.material.dispose();
       }
-      // label texture
       if (x.userData?._labelTexture) x.userData._labelTexture.dispose?.();
     });
   }
@@ -1015,7 +1012,7 @@ class RowBuilder{
     });
 
     const line = new THREE.Line(geo, mat);
-    line.userData.rowId = r.id; // クリック判定用
+    line.userData.rowId = r.id;
     r.pathLine = line;
     group.add(line);
 
@@ -1029,7 +1026,6 @@ class RowBuilder{
 ========================================================= */
 class StringArt3DApp{
   constructor({ threeUrl }){
-    // DOM
     this.stage = document.getElementById("stage");
     this.hudText = document.getElementById("hudText");
     this.hudNM = document.getElementById("hudNM");
@@ -1042,7 +1038,6 @@ class StringArt3DApp{
     this.btnSave = document.getElementById("saveAll");
     this.btnOpenGlobal = document.getElementById("openGlobal");
 
-    // Row modal
     this.rowModalOverlay = document.getElementById('rowModalOverlay');
     this.rowModalTitle = document.getElementById('rowModalTitle');
     this.rowModalClose = document.getElementById('rowModalClose');
@@ -1055,7 +1050,6 @@ class StringArt3DApp{
     this.optAnimTime = document.getElementById('optAnimTime');
     this.optStart = document.getElementById('optStart');
 
-    // Global modal
     this.globalModalOverlay = document.getElementById('globalModalOverlay');
     this.globalModalClose = document.getElementById('globalModalClose');
     this.optTheme = document.getElementById('optTheme');
@@ -1063,7 +1057,6 @@ class StringArt3DApp{
     this.optRadius = document.getElementById('optRadius');
     this.optHeight = document.getElementById('optHeight');
 
-    // State
     this.threeUrl = threeUrl;
     this.themeManager = new ThemeManager();
     this.globalState = { radius: 3.0, height: 4.0 };
@@ -1085,16 +1078,13 @@ class StringArt3DApp{
 
     this.globalPlaying = false;
 
-    // animation loop state
     this.rafAnim = null;
     this.lastT = null;
 
-    // batched rebuild
     this.rafDraw = null;
     this.dirtyAll = false;
     this.dirtyRowIds = new Set();
 
-    // modal binding
     this.modalRow = null;
     this.modalRowCard = null;
   }
@@ -1118,7 +1108,6 @@ class StringArt3DApp{
     this.three.render();
   }
 
-  /* ---------- HUD NM ---------- */
   showPickedNM(N, M){
     this.hudNM.textContent = `N=${N}, M=${M}`;
     this.hudNM.style.display = 'inline-block';
@@ -1128,7 +1117,6 @@ class StringArt3DApp{
     this.hudNM.style.display = 'none';
   }
 
-  /* ---------- math/info ---------- */
   getCycleInfo(r){
     const N=r.N, M=r.M;
     if (!Number.isInteger(N) || !Number.isInteger(M) || N<3 || M<1){
@@ -1146,7 +1134,6 @@ class StringArt3DApp{
     return this.rows.some(r => r.animPlaying);
   }
 
-  /* ---------- drawing scheduler (batched) ---------- */
   requestDrawAll(){
     this.dirtyAll = true;
     this.dirtyRowIds.clear();
@@ -1181,13 +1168,11 @@ class StringArt3DApp{
     this.updateGlobalInfo();
     this.three.render();
 
-    // アニメが必要なら回し始める
     if (this.anyAnimationPlaying() && !this.rafAnim){
       this.rafAnim = requestAnimationFrame((t)=>this._tick(t));
     }
   }
 
-  /* ---------- animation tick ---------- */
   _tick(t){
     if (this.lastT == null) this.lastT = t;
     const dt = (t - this.lastT) / 1000;
@@ -1230,7 +1215,6 @@ class StringArt3DApp{
     }
   }
 
-  /* ---------- UI ---------- */
   rowTitle(r){
     const n = (r.N == null ? "" : r.N);
     const m = (r.M == null ? "" : r.M);
@@ -1385,7 +1369,6 @@ class StringArt3DApp{
       app.requestDrawRow(r.id);
     };
 
-    // 入力中も即時反映するが、描画は rAF でまとめられる（負荷過重を抑える）
     inN.addEventListener('input', applyN);
     inM.addEventListener('input', applyM);
     inN.addEventListener('change', applyN);
@@ -1411,9 +1394,8 @@ class StringArt3DApp{
       card._setAnimIcon();
 
       stopGlobalIfNeeded();
-
       app.requestDrawRow(r.id);
-      // アニメ開始なら tick が回り始める
+
       if (r.animPlaying && !app.rafAnim){
         app.rafAnim = requestAnimationFrame((t)=>app._tick(t));
       }
@@ -1423,7 +1405,7 @@ class StringArt3DApp{
 
     btnDel.addEventListener('click', ()=>{
       stopGlobalIfNeeded();
-      app.hidePickedNM(); // 表示中のNMが消えるように
+      app.hidePickedNM();
       const i = app.rows.findIndex(x => x.id === r.id);
       if (i >= 0){
         app.rowBuilder.clearRow3D(app.rows[i]);
@@ -1466,7 +1448,6 @@ class StringArt3DApp{
     this.requestDrawRow(r.id);
   }
 
-  /* ---------- Modals ---------- */
   openRowSettings(r, card){
     this.modalRow = r;
     this.modalRowCard = card;
@@ -1534,7 +1515,7 @@ class StringArt3DApp{
     if (this.modalRowCard && this.modalRowCard._updateMeta) this.modalRowCard._updateMeta();
     if (this.modalRowCard && this.modalRowCard._setAnimIcon) this.modalRowCard._setAnimIcon();
 
-    this.hidePickedNM(); // 表示は状況変化で一旦消す
+    this.hidePickedNM();
     this.requestDrawRow(r.id);
   }
 
@@ -1571,7 +1552,6 @@ class StringArt3DApp{
     this.requestDrawAll();
   }
 
-  /* ---------- Global play ---------- */
   prepareSpeedsForAll(){
     const validRows = this.rows.filter(r=>{
       const info = this.getCycleInfo(r);
@@ -1587,7 +1567,6 @@ class StringArt3DApp{
     }
   }
 
-  /* ---------- Events ---------- */
   _installEvents(){
     // row modal
     this.rowModalClose.addEventListener('click', ()=> this.closeRowSettings());
@@ -1632,6 +1611,7 @@ class StringArt3DApp{
         this.btnToggleAll.textContent = "⏸ 全アニメ停止";
         this.hidePickedNM();
         this.requestDrawAll();
+
         if (this.anyAnimationPlaying() && !this.rafAnim){
           this.rafAnim = requestAnimationFrame((t)=>this._tick(t));
         }
@@ -1670,10 +1650,21 @@ class StringArt3DApp{
       this.requestDrawAll();
     });
 
-    // クリック：線ならNM表示、空なら消す
+    // --- 線クリック判定（ドラッグと衝突しないよう click で） ---
+    let downX = 0, downY = 0;
     this.stage.addEventListener('pointerdown', (e)=>{
-      // 左クリックのみ（右ドラッグのパンと衝突させない）
+      downX = e.clientX;
+      downY = e.clientY;
+    });
+
+    this.stage.addEventListener('click', (e)=>{
+      // 左クリックのみ（右ドラッグ=パンと衝突させない）
       if (e.button !== 0) return;
+
+      // ドラッグ後の click を無視（回転/パンの邪魔をしない）
+      const dx = e.clientX - downX;
+      const dy = e.clientY - downY;
+      if ((dx*dx + dy*dy) > 9) return; // 3px超ならドラッグ扱い
 
       const lineObjects = this.rows.map(r=>r.pathLine).filter(Boolean);
       const hitLine = this.three.pickLine(e.clientX, e.clientY, lineObjects);
@@ -1690,6 +1681,14 @@ class StringArt3DApp{
         return;
       }
       this.showPickedNM(row.N, row.M);
+    });
+
+    // --- ダブルクリックで画角を最初に戻す ---
+    this.stage.addEventListener('dblclick', (e)=>{
+      e.preventDefault();
+      this.hidePickedNM();
+      this.three.resetViewToFit(this.globalState.radius, this.globalState.height);
+      this.requestDrawAll();
     });
   }
 
